--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/activity_main"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.tcl.lishanwang.oneshop.MainActivity"
-    android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical" >
 
-    <TextView
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="10" />
+
+    <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="MainActivity"/>
+        android:background="@color/bg_bottom_navigation"
+        android:orientation="horizontal"
+        android:id="@+id/rg_bottom_tags" >
+
+        <RadioButton
+            android:id="@+id/rb_home"
+            style="@style/BottomTagStyle"
+            android:drawableTop="@drawable/selector_general_ic_home"
+            android:text="@string/home" />
+
+        <RadioButton
+            android:id="@+id/rb_news"
+            style="@style/BottomTagStyle"
+            android:drawableTop="@drawable/selector_general_ic_category"
+            android:text="@string/category" />
+
+        <RadioButton
+            android:id="@+id/rb_service"
+            style="@style/BottomTagStyle"
+            android:drawableTop="@drawable/selector_general_ic_discovery"
+            android:text="@string/discovery" />
+
+        <RadioButton
+            android:id="@+id/rb_gov"
+            style="@style/BottomTagStyle"
+            android:drawableTop="@drawable/selector_general_ic_service"
+            android:text="@string/service" />
+
+    </RadioGroup>
 
 </LinearLayout>
