--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/colorBackground</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -38,13 +39,13 @@
     <style name="ServiceOrdersMenuIcon">
         <item name="android:layout_width">30dp</item>
         <item name="android:layout_height">30dp</item>
-        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
     </style>
 
     <style name="ServiceMyMenuIcon">
         <item name="android:layout_width">40dp</item>
         <item name="android:layout_height">40dp</item>
-        <item name="android:layout_marginBottom">14dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
     </style>
 
     <style name="ServiceOrdersMenuText">
@@ -68,6 +69,30 @@
         <item name="android:orientation">vertical</item>
         <item name="android:background">@android:color/white</item>
         <item name="android:layout_marginTop">12dp</item>
+    </style>
+
+    <style name="ServiceSimpleItem">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:layout_marginBottom">1dp</item>
+        <item name="android:background">@android:color/white</item>
+    </style>
+
+    <style name="ServiceSimpleItemTv">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textColor">#333333</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_marginStart">10dp</item>
+    </style>
+
+    <style name="ServiceSimpleItemIcon">
+        <item name="android:layout_width">25dp</item>
+        <item name="android:layout_height">25dp</item>
     </style>
 
 </resources>
