add service fragment toolbar.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,19 +5,22 @@
               android:orientation="vertical" >
 
     <android.support.v7.widget.Toolbar
+        android:id="@+id/tb_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary">
         <LinearLayout
+            android:id="@+id/ll_toolbar_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:visibility="visible">
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:padding="8dp"
+                android:padding="6dp"
                 android:background="@drawable/bg_home_search"
                 android:text="@string/toolbar_hint_search"
                 android:textColor="#999999"
@@ -33,6 +36,36 @@
                 android:layout_margin="12dp"
                 android:clickable="true"
                 android:background="@drawable/selector_cart"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_toolbar_service"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:visibility="gone">
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:clickable="true"
+                android:src="@drawable/selector_service_setting"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/service"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:gravity="center"/>
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="14dp"
+                android:clickable="true"
+                android:src="@drawable/selector_service_msg"/>
         </LinearLayout>
 
     </android.support.v7.widget.Toolbar>
