--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -1,17 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="horizontal">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_category_left"
+    <ScrollView
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2"/>
+        android:layout_weight="2"
+        android:scrollbars="none">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_category_right"
+        <RadioGroup
+            android:id="@+id/rg_category_left"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RadioButton
+                style="@style/CategoryLeftMenuRadioButton"
+                android:text="Protective\naccessories"/>
+
+            <RadioButton
+                style="@style/CategoryLeftMenuRadioButton"
+                android:text="Audio"/>
+
+            <RadioButton
+                style="@style/CategoryLeftMenuRadioButton"
+                android:text="Power bank"/>
+
+            <RadioButton
+                style="@style/CategoryLeftMenuRadioButton"
+                android:text="Car\naccessories"/>
+
+            <RadioButton
+                style="@style/CategoryLeftMenuRadioButton"
+                android:text="Universal\naccessories"/>
+
+            <RadioButton
+                style="@style/CategoryLeftMenuRadioButton"
+                android:text="Wearables"/>
+        </RadioGroup>
+    </ScrollView>
+
+
+    <TextView
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="5"
