--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -93,4 +93,15 @@
         <item name="android:layout_height">25dp</item>
     </style>
 
+    <style name="CategoryLeftMenuRadioButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">80dp</item>
+        <item name="android:background">@drawable/selector_bg_category_left_item</item>
+        <item name="android:button">@null</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@drawable/selector_category_left_text_color</item>
+        <item name="android:lines">2</item>
+        <item name="android:lineSpacingExtra">5dp</item>
+    </style>
+
 </resources>
