--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,7 @@
         android:background="?attr/colorPrimary">
         <LinearLayout
             android:id="@+id/ll_toolbar_search"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:visibility="visible">
+            style="@style/ToolbarLinearLayoutContainer">
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -31,41 +27,26 @@
                 android:paddingStart="18dp"/>
 
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_margin="12dp"
-                android:clickable="true"
-                android:background="@drawable/selector_cart"/>
+                android:layout_marginStart="14dp"
+                android:background="@drawable/selector_cart"
+                style="@style/ToolbarImageView"/>
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/ll_toolbar_service"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:visibility="gone">
+            android:visibility="gone"
+            style="@style/ToolbarLinearLayoutContainer">
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:clickable="true"
-                android:src="@drawable/selector_service_setting"/>
+                android:src="@drawable/selector_service_setting"
+                style="@style/ToolbarImageView"/>
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="@string/service"
-                android:textColor="@android:color/white"
-                android:textSize="18sp"
-                android:gravity="center"/>
+                style="@style/ToolbarMiddleTextView"/>
 
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginEnd="14dp"
-                android:clickable="true"
-                android:src="@drawable/selector_service_msg"/>
+                android:src="@drawable/selector_service_msg"
+                style="@style/ToolbarImageView"/>
         </LinearLayout>
 
     </android.support.v7.widget.Toolbar>
