--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/bg_bottom_navigation"
+        android:background="@color/colorWhite"
         android:orientation="horizontal"
         android:id="@+id/rg_bottom_tags" >
 
