--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimaryDark">#1c2837</color>
     <color name="colorAccent">#35B0ff</color>
     <color name="colorBackground">#F5F5F5</color>
-    <color name="bg_bottom_navigation">#ffffff</color>
-    <color name="bottom_btn_selected">#35B0ff</color>
-    <color name="bottom_btn_normal">#999999</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="colorLightGray">#999999</color>
+    <color name="colorGray">#666666</color>
+    <color name="colorDarkGray">#333333</color>
 </resources>
