--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,11 +54,15 @@
             android:background="@null"
             android:inputType="text"
             android:hint="@string/account"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:textColor="@color/colorGray"/>
 
     </LinearLayout>
 
-    <include layout="@layout/divide_line_view"/>
+    <View
+        android:layout_width="@dimen/activity_horizontal_margin"
+        android:layout_height="1dp"
+        android:background="@color/colorWhite"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -80,7 +84,8 @@
             android:background="@null"
             android:hint="@string/password"
             android:inputType="textPassword"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:textColor="@color/colorGray"/>
 
         <CheckBox
             android:id="@+id/cb_password_visibility"
@@ -118,7 +123,7 @@
         <View
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="1dp"
+            android:layout_height="0.5dp"
             android:background="#33333333"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
@@ -132,7 +137,7 @@
         <View
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="1dp"
+            android:layout_height="0.5dp"
             android:background="#33333333"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
