A tiny modification on Login page.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,15 +54,11 @@
             android:background="@null"
             android:inputType="text"
             android:hint="@string/account"
-            android:textSize="16sp"
-            android:textColor="@color/colorGray"/>
+            android:textSize="16sp"/>
 
     </LinearLayout>
 
-    <View
-        android:layout_width="@dimen/activity_horizontal_margin"
-        android:layout_height="1dp"
-        android:background="@color/colorWhite"/>
+    <include layout="@layout/divide_line_view"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -84,8 +80,7 @@
             android:background="@null"
             android:hint="@string/password"
             android:inputType="textPassword"
-            android:textSize="16sp"
-            android:textColor="@color/colorGray"/>
+            android:textSize="16sp"/>
 
         <CheckBox
             android:id="@+id/cb_password_visibility"
@@ -123,7 +118,7 @@
         <View
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="0.5dp"
+            android:layout_height="1dp"
             android:background="#33333333"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
@@ -137,7 +132,7 @@
         <View
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="0.5dp"
+            android:layout_height="1dp"
             android:background="#33333333"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
