--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,9 +29,10 @@
                 android:id="@+id/tv_sign_in"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:clickable="true"
                 android:text="@string/sign_in"
                 android:textSize="14sp"
-                android:textColor="@android:color/white"/>
+                android:textColor="@drawable/selector_color_toolbar_text"/>
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
 
