--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/colorBackground</item>
-        <item name="android:textColor">#333333</item>
+        <item name="android:textColor">@color/colorDarkGray</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
